Update server and start of debug front
